[gd_scene load_steps=4 format=2]

[ext_resource path="res://AAI Case/screens/bottom_screen_stuff/components/evidence_components/EvidenceMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://AAI Case/screens/bottom_screen_stuff/components/evidence_components/EvidenceCloseup.tscn" type="PackedScene" id=2]
[ext_resource path="res://AAI Case/screens/bottom_screen_stuff/components/EvidenceMenus.gd" type="Script" id=3]

[node name="EvidenceStuff" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -192.0
margin_right = 256.0
rect_min_size = Vector2( 256, 192 )
script = ExtResource( 3 )

[node name="EvidenceCloseup" parent="." instance=ExtResource( 2 )]
visible = false

[node name="EvidenceMenuHub" parent="." instance=ExtResource( 1 )]

[node name="PresentButton" type="Button" parent="."]
margin_right = 256.0
margin_bottom = 20.0
rect_min_size = Vector2( 256, 0 )
text = "Present"

[node name="BackButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -36.0
margin_right = 93.0
text = "Back"

[connection signal="closeup_left" from="EvidenceCloseup" to="." method="_on_EvidenceCloseup_closeup_left"]
[connection signal="closeup_right" from="EvidenceCloseup" to="." method="_on_EvidenceCloseup_closeup_right"]
[connection signal="pressed" from="PresentButton" to="." method="_on_PresentButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
